--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,9 @@
 name: CI
+    strategy:
+      matrix:
+        os: [ubuntu-latest, macos-latest, windows-latest]
+        python-version: ["3.8", "3.9", "3.10"]
+
 
 # We can specify which Github events will trigger a CI build
 on: push
@@ -9,7 +14,9 @@ jobs:
   build:
 
     # we can also specify the OS to run tests on
-    runs-on: ubuntu-latest
+    # runs-on: ubuntu-latest
+    runs-on: ${{ matrix.os }}
+
 
     # a job is a seq of steps
     steps:
@@ -19,10 +26,10 @@ jobs:
     - name: Checkout repository
       uses: actions/checkout@v2
 
-    - name: Set up Python 3.10
+    - name: Set up Python
       uses: actions/setup-python@v2
       with:
-        python-version: "3.10"
+        python-version: ${{ matrix.python-version }}
 
     - name: Install Python dependencies
       run: |
@@ -32,4 +39,3 @@ jobs:
     - name: Test with PyTest
       run: |
         python -m pytest --cov=inflammation.models tests/test_models.py
-
