--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,9 +1,4 @@
 name: CI
-strategy:
-  matrix:
-    os: [ubuntu-latest, macos-latest, windows-latest]
-    python-version: ["3.8", "3.9", "3.10"]
-
 
 # We can specify which Github events will trigger a CI build
 on: push
@@ -15,6 +10,11 @@ jobs:
 
     # we can also specify the OS to run tests on
     # runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        os: [ ubuntu-latest, macos-latest, windows-latest ]
+        python-version: [ "3.8", 3.9", "3.10" ]
+
     runs-on: ${{ matrix.os }}
 
 
